# napari-gtlearning

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_gtlearning/: __init__.py  _widget.py  napari.yaml  path.py
src/napari_gtlearning/_tests/: test_widget.py
